Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51156

Embedded Linux: QtWebEngine prints warnings about missing icudtl.dat

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.6.0 Beta
    • WebEngine
    • None
    • Yocto Project master

    Description

      When running an application using QtWebEngine 5.6 Beta from Git, it triggers following error:

      Qt WebEngine ICU data not found at /usr/share/qt5/resources. Trying parent directory...
      Qt WebEngine ICU data not found at /usr/share/qt5. Trying application directory...
      Qt WebEngine ICU data not found at /bin. Trying fallback directory... The application MAY NOT work.
      ...

      This has been reproduced using the Yocto Project and checking the installation directory it does not include the respective file (icudtl.dat)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkohne Kai Köhne
              otavio Otavio Salvador
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews