ICU: Do not try to search for icudtl.dat for WEBENGINE_CONFIG+=system_icu

Do not try to find icudt.dat if we use system ICU. This
avoids warnings like

  Qt WebEngine ICU data not found at /usr/share/qt5/resources. Trying parent directory...
  Qt WebEngine ICU data not found at /usr/share/qt5. Trying application directory...
  Qt WebEngine ICU data not found at /bin. Trying fallback directory... The application MAY NOT work.

on every startup, e.g. for embedded linux. The defines and macros
are the same as in chromium.

Task-number: QTBUG-51156
Change-Id: I6c24b73cca88020504489695e889f49c5d7be424
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>